--- a/web/vistas-documentos/ver-anteproyecto.xhtml
+++ b/web/vistas-documentos/ver-anteproyecto.xhtml
@@ -26,12 +26,8 @@
                 </p:dialog>
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />                                        
-                        <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />                    
-                        <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-estudiante.xhtml" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="./../perfiles/vista-estudiante.xhtml" />
-                        <p:menuitem value="2. Realización del Anteproyecto" />
-                        <p:menuitem value="Ver Anteproyecto" outcome="ver-anteproyecto" />
+                        <p:menuitem value="Inicio" outcome="ver-anteproyecto" />
+                        <p:menuitem value="Ver Anteproyecto" />
                     </p:breadCrumb>              
                 </h:form>
             </ui:define>
@@ -90,7 +86,6 @@
                             <br />
                             <h:panelGrid style="margin: 0 auto;">  
                                 <p:button value="Volver" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;"/>
-                                <!--<p:button value="Volver" outcome="2-realizacion-anteproyecto" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;"/>-->
                             </h:panelGrid> 
                         </p:panel>
                     </h:form>
