--- a/web/vistas-documentos/ver-formato-D.xhtml
+++ b/web/vistas-documentos/ver-formato-D.xhtml
@@ -13,8 +13,9 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <!-- ToDo miga de pan por programación -->
-                    <p:breadCrumb styleClass="migaDePan">                        
-                        <p:menuitem value="Ver Formato A" />
+                    <p:breadCrumb styleClass="migaDePan">
+                        <p:menuitem value="Inicio" />
+                        <p:menuitem value="Ver Formato D" />
                     </p:breadCrumb>
                 </h:form>
             </ui:define>
@@ -101,9 +102,8 @@
                             </h:panelGrid>
                             <br />
                             <h:panelGrid columns="2" cellpadding="12" style="margin: 0 auto">
-                                <p:button value="Volver" icon="ui-icon-arrowthick-1-w" style="font-size: 13px;"/>                                
-                                <!--<p:button value="Volver" outcome="fases-trabajo-de-grado" icon="ui-icon-arrowthick-1-w" style="font-size: 13px;"/>-->                                
-                                <p:button value="Descargar" icon="ui-icon-arrowthickstop-1-s" style="font-size: 13px;" />
+                                <p:button value="Volver" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;" />                               
+                                <p:button value="Descargar" icon="ui-icon-arrowthickstop-1-s" style="font-size: 13px; width: 120px;" />
                             </h:panelGrid>
                         </p:panel>
                     </h:form>
