--- a/web/vistas-documentos/ver-formato-revision-idea.xhtml
+++ b/web/vistas-documentos/ver-formato-revision-idea.xhtml
@@ -13,11 +13,7 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Director" outcome="./../perfiles/vista-director.xhtml" />                                        
-                        <p:menuitem value="Jefe de Departamento" outcome="./../perfiles/vista-jefe-de-departamento.xhtml" />
-                        <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-jefe-de-departamento.xhtml" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" />
-                        <p:menuitem value="1. Presentación de la Idea" />
+                        <p:menuitem value="Inicio" outcome="ver-formato-revision-idea" />
                         <p:menuitem value="Ver Revisión de la idea" />
                     </p:breadCrumb>   
                 </h:form>
@@ -74,8 +70,7 @@
                             </h:panelGrid>
                             <br />
                             <h:panelGrid columns="2" cellpadding="12" style="margin: 0 auto">
-                                <p:button value="Volver" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;"/>                                
-                                <!--<p:button value="Volver" outcome="fases-trabajo-de-grado" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;"/>-->
+                                <p:button value="Volver" icon="ui-icon-arrowthick-1-w" style="font-size: 13px; width: 120px;"/>
                                 <p:button value="Descargar" icon="ui-icon-arrowthickstop-1-s" style="font-size: 13px; width: 120px;" />
                             </h:panelGrid>
                         </p:panel>
