--- a/web/coordinador/diligenciar-formato-D.xhtml
+++ b/web/coordinador/diligenciar-formato-D.xhtml
@@ -13,11 +13,11 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Coordinador" outcome="./../perfiles/vista-coordinador-de-programa.xhtml" />
+                        <p:menuitem value="Inicio" outcome="./../perfiles/vista-coordinador-de-programa.xhtml" />
                         <p:menuitem value="Coordinador" outcome="./../perfiles/vista-coordinador-de-programa.xhtml" />
                         <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-coordinador-de-programa.xhtml" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fases-trabajo-de-grado" />
-                        <p:menuitem value="3. Evaluación del Anteproyecto" outcome="fases-trabajo-de-grado" />
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-evaluacion-anteproyecto" />
+                        <p:menuitem value="3. Evaluación del Anteproyecto" outcome="fase-evaluacion-anteproyecto" />
                         <p:menuitem value="Presentación del Anteproyecto" />
                     </p:breadCrumb>              
                 </h:form>
@@ -30,12 +30,11 @@
                 #{menuController.setOutPerfiles(true)}
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
-                        <h:outputText value="Presentación del Anteproyecto a la Secretaría de la Facultad"/> <br/>
+                        <h:outputText value="Presentación del Anteproyecto a la Secretaria de la Facultad"/> <br/>
                     </div>
-
                     <p:spacer height="30"/>
                     <h:form>
-                        <p:growl id="growl" sticky="true" showDetail="true"/>
+                        <p:growl id="growl" showDetail="true" life="5000"/>
                         <p:wizard backLabel="Anterior" nextLabel="Siguiente" style="font-size: 14px;">
                             <p:tab id="paso1" title="Paso 1">
                                 <p:panel header="Campos con * son obligatorios">
@@ -200,11 +199,11 @@
                                         </p:fieldset>
 
                                     </h:panelGrid>
-                                    <p:commandButton style="display: block; margin: 0 auto;" value="Guardar" update="growl" action="#{formatoD.btnGuardar()}" icon="ui-icon-disk"/>
+                                    <p:commandButton value="Guardar" update="growl" action="#{formatoD.btnGuardar()}" icon="ui-icon-disk" style="display: block; margin: 0 auto;" />
                                 </p:panel>
                             </p:tab>
                         </p:wizard>
-                        <p:button value="Cancelar" outcome="fases-trabajo-de-grado" style="margin-top: 20px; display: block; margin: 0 auto; font-size: 14px;" icon="ui-icon-cancel" />
+                        <p:button value="Cancelar" outcome="fase-evaluacion-anteproyecto" style="margin-top: 20px; display: block; margin: 0 auto; font-size: 14px;" icon="ui-icon-cancel" />
                     </h:form>
                 </p:panel>
             </ui:define>
