--- a/web/director/editar-anteproyecto.xhtml
+++ b/web/director/editar-anteproyecto.xhtml
@@ -11,27 +11,14 @@
         <ui:composition template="./../plantillas/plantilla.xhtml">
 
             <ui:define name="menuprincipal">
-
-                <script type="text/javascript">
-                    function mostrarestado() {
-                        PF('statusDialog').show();
-                    }
-                    function ocultarestado() {
-                        PF('statusDialog').hide();
-                    }
-                </script>
-
-                <p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false" resizable="false">
-                    <p:graphicImage library="img" name="ajax-loader.gif" />
-                </p:dialog>
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
                         <p:menuitem value="Director" outcome="./../perfiles/vista-director.xhtml" />
                         <p:menuitem value="Director" outcome="./../perfiles/vista-director.xhtml" />
                         <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-director.xhtml" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fases-trabajo-de-grado" />
-                        <p:menuitem value="1. Presentación de la Idea" outcome="fases-trabajo-de-grado" />
-                        <p:menuitem value="Diligenciar Formato A" outcome="diligenciar-formato-A" />
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-realizacion-anteproyecto" />
+                        <p:menuitem value="2. Realización del Anteproyecto" outcome="fase-realizacion-anteproyecto" />
+                        <p:menuitem value="Editar Anteproyecto" />
                     </p:breadCrumb>              
                 </h:form>
             </ui:define>
@@ -46,10 +33,10 @@
                         <h:outputText value="Editar Anteproyecto"/> <br/>
                     </div>                 
                     <p:spacer height="30"/>
-                    <h:form enctype="multipart/form-data">   
-
+                    <h:form enctype="multipart/form-data">
+                        
                         <p:panel style="width: 100%; font-size: 14px;" header="Campos con * son obligatorios">
-                            <p:growl id="growl" sticky="true" showDetail="true"/>
+                            <p:growl id="growl" showDetail="true" life="5000"/>
                             <p:messages/>
 
                             <h:panelGrid style="margin: 0 auto;" columns="2" cellpadding="15" >
@@ -76,13 +63,13 @@
                             </h:panelGrid>
                             <p:spacer height="10"/>
                             <h:panelGrid style="margin: 0 auto;" columns="3" cellpadding="13">
-                                <p:commandButton value="Editar" update="growl" actionListener="#{anteproyecto.editar()}" icon="ui-icon-pencil" style="font-size: 13px; width: 120px;"/>
+                                <p:commandButton value="Editar" update="growl" action="#{anteproyecto.editar()}" icon="ui-icon-pencil" style="font-size: 13px; width: 120px;"/>
                                 <p:commandButton id="btndesc" style="font-size: 13px; width: 160px;" value="Descargar archivo" rendered="#{anteproyecto.filedown != null}"
                                                  ajax="false" onclick="PrimeFaces.monitorDownload(mostrarestado, ocultarestado);" 
                                                  icon="ui-icon-arrowthick-1-s" action="#{anteproyecto.preparardescarga()}">
                                     <p:fileDownload value="#{anteproyecto.filedown}" />
                                 </p:commandButton>
-                                <p:button value="Cancelar" icon="ui-icon-cancel" outcome="2-realizacion-anteproyecto" style="font-size: 13px; width: 120px;"/>
+                                <p:button value="Cancelar" icon="ui-icon-cancel" outcome="fase-realizacion-anteproyecto" style="font-size: 13px; width: 120px;"/>
                             </h:panelGrid>
                         </p:panel>
                     </h:form>
