--- a/web/evaluador/fase-evaluacion-anteproyecto.xhtml
+++ b/web/evaluador/fase-evaluacion-anteproyecto.xhtml
@@ -16,8 +16,10 @@
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
                         <p:menuitem value="Evaluador" outcome="./../perfiles/vista-evaluador.xhtml" />
-                        <p:menuitem value="Evaluador" outcome="./../perfiles/vista-evaluador.xhtml" />                        
-                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fases-trabajo-de-grado" />                        
+                        <p:menuitem value="Evaluador" outcome="./../perfiles/vista-evaluador.xhtml" />
+                        <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-evaluador.xhtml" />
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-evaluacion-anteproyecto" />
+                        <p:menuitem value="3. Evaluación del Anteproyecto" />
                     </p:breadCrumb>              
                 </h:form>
             </ui:define>
@@ -27,13 +29,14 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-
                 #{trabajodegradoController.setUsunomEval(serviciosSimcaController.nombreUsuario)}
+                
                 <h:form>                    
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
                             #{trabajodegradoController.trabajo.trabajonombre}
-                        </div>                                         
+                        </div>
+                        <p:growl id="growl" showDetail="true" life="5000"/>
                         <p:spacer height="25"/>
                         <p:panel id="fasesTrabajoGrado" header="Fases del Trabajo de Grado">
                             <h:panelGrid columns="6" cellpadding="1" style="margin: 0 auto;">
@@ -48,22 +51,21 @@
                                 <p:button value="Presentación de la Idea" outcome="fase-presentacion-de-la-idea" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px;height: 96px; font-size: 13px;" />
                                 <p:button value="Realización del Anteproyecto" outcome="fase-realizacion-anteproyecto" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px;height: 96px; font-size: 13px;" />
                                 <p:commandButton type="button" value="Evaluación del Anteproyecto" style="width: 105px; background-color:greenyellow; height: 96px; font-size: 13px;" disabled="#{trabajodegradoController.fases.primeraFase}" >                            
-                                    <p:effect type="highlight" event="click" for="pnlEvaluacion">
+                                    <p:effect type="highlight" event="click" for="pnlEvaluacionAnteproyecto">
                                         <f:param name="mode" value="'show'" />
                                     </p:effect>
                                 </p:commandButton>
-                                <p:button value="Ejecución del Trabajo de Grado" href="4-ejecucion-trabajo-grado" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
-                                <p:button value="Evaluación del Trabajo de Grado" href="5-evaluacion-trabajo-grado" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
-                                <p:button value="Finalizado" href="6-finalizado" disabled="#{trabajodegradoController.fases.sextaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                                <p:button value="Ejecución del Trabajo de Grado" href="#" disabled="#{trabajodegradoController.fases.cuartaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                                <p:button value="Evaluación del Trabajo de Grado" href="#" disabled="#{trabajodegradoController.fases.quintaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
+                                <p:button value="Finalizado" href="#" disabled="#{trabajodegradoController.fases.sextaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
                             </h:panelGrid>
                         </p:panel>      
                         <p:spacer height="25"/>
-                        <p:panel id="pnlEvaluacion" header="1. Presentación de la Idea" style=" font-size: 14px;" widgetVar="pnlPresentacionIdea">
-
+                        <p:panel id="pnlEvaluacionAnteproyecto" header="3. Evaluación del Anteproyecto" style=" font-size: 14px;" widgetVar="pnlEvaluacionAnteproyecto">
                             <h:panelGrid columns="5" cellpadding="5" cellspacing="5">
                                 <h:outputText value="Formato B:" style="font-weight: bold;" />
-                                <p:button value="Diligenciar" icon="ui-icon-document" href="diligenciar-formato-B.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnDiligenciarFormatoB}" style="width: 120px;" />          
-                                <p:button value="Editar" icon="ui-icon-pencil" href="editar-formato-B.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnEditarFormatoB}" style="width: 120px;" />
+                                <p:button value="Diligenciar" icon="ui-icon-document" href="diligenciar-formato-B.xhtml" disabled="#{trabajodegradoController.btnDiligenciarFormatoB}" style="width: 120px;" />          
+                                <p:button value="Editar" icon="ui-icon-pencil" href="editar-formato-B.xhtml" disabled="#{trabajodegradoController.btnEditarFormatoB}" style="width: 120px;" />
                                 <p:commandButton value="Ver" icon="ui-icon-comment" actionListener="#{formatoB.btnVerFormatoB(serviciosSimcaController.nombreUsuario)}" disabled="#{trabajodegradoController.btnVerFormatoB}" style="width: 120px;" /> 
                                 <p:commandButton value="Descargar" icon="ui-icon-arrowthickstop-1-s" disabled="#{trabajodegradoController.btnDescargarFormatoB}" style="width: 120px;" actionListener="#{pdfFormatoB.pdfFormatoBEvaluador(serviciosSimcaController.nombreUsuario)}" oncomplete="PF('dlgVerRutina').show();" />
                             </h:panelGrid>
@@ -79,10 +81,7 @@
                         </c:if>
                     </p:dialog>        
                 </h:form> 
-
             </ui:define>
-
         </ui:composition>
-
     </body>
 </html>
